--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -2,10 +2,6 @@ name: tests
 
 on: pull_request
 
-env:
-  REGISTRY: ${{ github.repository }}
-  IMAGE_NAME: tests
-
 jobs:
   cpu-tests:
     runs-on: [self-hosted, ipickering]
@@ -17,7 +13,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          images: ${{ github.repository }}/tests
 
       - name: Build Docker image
         uses: docker/build-push-action@v5
