--- a/.github/workflows/tools.yaml
+++ b/.github/workflows/tools.yaml
@@ -17,7 +17,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          images: ${{ github.repository }}/tools
 
       - name: Build Docker image
         uses: docker/build-push-action@v5
