--- a/.dockerignore
+++ b/.dockerignore
@@ -54,6 +54,8 @@ report*.sqlite
 
 # Workflows and github-specific stuff
 .github/
+# No git objects if using a path context
+.git/
 
 # logos and compressed downloads
 *.png
