--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,7 @@ Untitled.ipynb
 
 # Output of examples
 examples/batched_dataset/
+examples/runs/
 
 # Used for CUB when building CUDA / C++ extensions
 /include/
