--- a/.gitignore
+++ b/.gitignore
@@ -51,8 +51,8 @@ Untitled.ipynb
 /tools/benchmark/
 
 # Output of examples
-examples/batched_dataset/
-examples/runs/
+/examples/batched_dataset/
+/examples/runs/
 
 # Used for CUB when building CUDA / C++ extensions
 /include/
