--- a/.github/workflows/tests-ext.yaml
+++ b/.github/workflows/tests-ext.yaml
@@ -23,15 +23,7 @@ jobs:
           build-args: BUILD_EXT=sm75
 
       - name: Run extension GPU tests (Quadro RTX 5000, SM75)
-        run: >-
-          docker run
-          --rm
-          --gpus '"device=3"'
-          --shm-size 1g
-          --ulimit memlock=-1
-          --ulimit stack=67108864
-          ${{ steps.meta.outputs.tags }}
-          bash -c "nvidia-smi && pytest ./tests/test_cuaev.py ./tests/test_infer.py"
+        run: docker run --rm --gpus '"device=3"' --shm-size 1g --ulimit memlock=-1 --ulimit stack=67108864 ${{ steps.meta.outputs.tags }} bash -c "nvidia-smi && pytest ./tests/test_cuaev.py ./tests/test_infer.py"
 
       - name: Remove image
         if: ${{ always() }}
