--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,18 +28,22 @@ jobs:
         run: docker run --rm --gpus all --shm-size 1g --ulimit memlock=-1 --ulimit stack=67108864 ${{ env.TAG }} bash -c "python tools/md-benchmark.py --nvtx --no-tqdm"
   tests:
     needs: [build-image]
+    runs-on: [self-hosted, ipickering]
     steps:
       - run: docker run --rm --gpus '"device=none"' --shm-size 1g --ulimit memlock=-1 --ulimit stack=67108864 ${{ steps.meta.outputs.tags }} bash -c "pytest ."
   docs:
     needs: [build-image]
+    runs-on: [self-hosted, ipickering]
     steps:
       - run: docker run --rm --gpus all --shm-size 1g --ulimit memlock=-1 --ulimit stack=67108864 ${{ steps.meta.outputs.tags }} bash -c "nvidia-smi && sphinx-build -W docs/src docs/build"
   mypy:
     needs: [build-image]
+    runs-on: [self-hosted, ipickering]
     steps:
       - run: pip install --upgrade mypy && mypy --install-types --non-interactive .
   flake8:
     needs: [build-image]
+    runs-on: [self-hosted, ipickering]
     steps:
       - run: pip install --upgrade flake8 && flake8 .
   #clang-format:
