--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,17 +3,16 @@ name: ci
 on: pull_request
 
 env:
-  TAG: cpu-ci:${{ github.event.pull_request.number || github.sha }}
+  TAG: ani-ci:${{ github.event.pull_request.number || github.sha }}
 
 jobs:
   build-image:
     runs-on: [self-hosted, ipickering]
     steps:
-      - name: Build Docker image
+      - name: Build Docker image (with NO extensions)
         uses: docker/build-push-action@v5
         with:
-          tags: cpu-ci:${{ github.event.pull_request.number || github.sha }}
-
+          tags: ${{ env.TAG }}
   tools:
     needs: [build-image]
     runs-on: [self-hosted, ipickering]
@@ -30,35 +29,38 @@ jobs:
     needs: [build-image]
     runs-on: [self-hosted, ipickering]
     steps:
-      - run: docker run --rm --gpus '"device=none"' --shm-size 1g --ulimit memlock=-1 --ulimit stack=67108864 ${{ steps.meta.outputs.tags }} bash -c "pytest ."
+      - run: docker run --rm --gpus '"device=none"' --shm-size 1g --ulimit memlock=-1 --ulimit stack=67108864 ${{ env.TAG }} bash -c "pytest ."
   docs:
     needs: [build-image]
     runs-on: [self-hosted, ipickering]
     steps:
-      - run: docker run --rm --gpus all --shm-size 1g --ulimit memlock=-1 --ulimit stack=67108864 ${{ steps.meta.outputs.tags }} bash -c "nvidia-smi && sphinx-build -W docs/src docs/build"
+      - run: docker run --rm --gpus all --shm-size 1g --ulimit memlock=-1 --ulimit stack=67108864 ${{ env.TAG }} bash -c "nvidia-smi && sphinx-build -W docs/src docs/build"
   mypy:
     needs: [build-image]
     runs-on: [self-hosted, ipickering]
     steps:
-      - run: pip install --upgrade mypy && mypy --install-types --non-interactive .
+      - run: docker run --rm --gpus '"device=none"' ${{ env.TAG }} bash -c "pip install --upgrade mypy && mypy --install-types --non-interactive ."
   flake8:
     needs: [build-image]
     runs-on: [self-hosted, ipickering]
     steps:
-      - run: pip install --upgrade flake8 && flake8 .
+      - run: docker run --rm --gpus '"device=none"' ${{ env.TAG }} bash -c "pip install --upgrade flake8 && flake8 ."
+
+  flake8:
+    needs: [build-image]
+    runs-on: [self-hosted, ipickering]
+    steps:
+      - run: docker run --rm --gpus '"device=none"' ${{ env.TAG }} bash -c "pip install --upgrade flake8 && flake8 ."
   #clang-format:
     #depends: [build-image]
     #steps:
-
   remove-image:
     if: ${{ always() }}
     needs: [build-image, tools, tests, mypy, flake8, docs]
     runs-on: [self-hosted, ipickering]
     steps:
-      - name: Remove image
-        continue-on-error: true
-        run: docker image rm ${{ env.TAG }}
+      - run: docker image rm ${{ env.TAG }}
 
 concurrency:
-  group: ci-${{ github.event.pull_request.number || github.sha }}
+  group: ani-ci-${{ github.event.pull_request.number || github.sha }}
   cancel-in-progress: true
