--- a/.github/workflows/ci-ext.yaml
+++ b/.github/workflows/ci-ext.yaml
@@ -19,7 +19,7 @@ jobs:
     runs-on: [self-hosted, ipickering]
     steps:
       - name: Test extensions on GPU (Quadro RTX 5000, SM75)
-        run: docker run --rm --gpus '"device=3"' --shm-size 1g --ulimit memlock=-1 --ulimit stack=67108864 ${{ env.TAG }} bash -c "nvidia-smi && pytest ./tests/test_cuaev.py ./tests/test_infer.py"
+        run: docker run --rm --gpus '"device=3"' --ipc=host --ulimit memlock=-1 --ulimit stack=67108864 ${{ env.TAG }} bash -c "nvidia-smi && pytest ./tests/test_cuaev.py ./tests/test_infer.py"
 
   remove-image:
     if: ${{ always() }}
