--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,6 +10,8 @@ jobs:
   build-image:
     runs-on: [self-hosted, ipickering]
     steps:
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v5
       - name: Build Docker image (with NO extensions)
         uses: docker/build-push-action@v5
         with:
@@ -18,6 +20,8 @@ jobs:
     needs: [build-image]
     runs-on: [self-hosted, ipickering]
     steps:
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v5
       - name: Build Docker image (with extensions, for SM75)
         uses: docker/build-push-action@v5
         with:
