--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,6 +5,7 @@ on: pull_request
 env:
   TAG: ani-ci:${{ github.sha }}
   EXT_TAG: ani-ci-with-ext:${{ github.sha }}
+  DOCKER_ARGS: --rm --ipc=host --ulimit memlock=-1 --ulimit stack=67108864
 
 jobs:
   build-image:
@@ -28,24 +29,24 @@ jobs:
     runs-on: [self-hosted, ipickering]
     steps:
       - name: Test extensions on GPU (Quadro RTX 5000, SM75)
-        run: docker run --rm --gpus '"device=3"' --ipc=host --ulimit memlock=-1 --ulimit stack=67108864 ${{ env.EXT_TAG }} bash -c "nvidia-smi && pytest ./tests/test_cuaev.py ./tests/test_infer.py"
+        run: docker run --gpus '"device=3"' ${{ env.DOCKER_ARGS }}  ${{ env.EXT_TAG }} bash -c "nvidia-smi && pytest ./tests/test_cuaev.py ./tests/test_infer.py"
   tools:
     needs: [build-image]
     runs-on: [self-hosted, ipickering]
     steps:
       - name: Inference benchmark
-        run: docker run --rm --gpus all --ipc=host --ulimit memlock=-1 --ulimit stack=67108864 ${{ env.TAG }} bash -c "python tools/inference-benchmark.py --no-tqdm"
+        run: docker run --gpus all ${{ env.DOCKER_ARGS }} ${{ env.TAG }} bash -c "python tools/inference-benchmark.py --no-tqdm"
       - name: COMP6v1 accuracy benchmark
-        run: docker run --rm --gpus all --ipc=host --ulimit memlock=-1 --ulimit stack=67108864 ${{ env.TAG }} bash -c "python tools/comp6v1-accuracy-benchmark.py --no-tqdm"
+        run: docker run --gpus all ${{ env.DOCKER_ARGS }} ${{ env.TAG }} bash -c "python tools/comp6v1-accuracy-benchmark.py --no-tqdm"
       - name: Training benchmark (with Nsight dry run)
-        run: docker run --rm --gpus all --ipc=host --ulimit memlock=-1 --ulimit stack=67108864 ${{ env.TAG }} bash -c "python tools/training-benchmark.py --nvtx --no-tqdm"
+        run: docker run --gpus all ${{ env.DOCKER_ARGS }} ${{ env.TAG }} bash -c "python tools/training-benchmark.py --nvtx --no-tqdm"
       - name: MD Benchmark (with Nsight dry run)
-        run: docker run --rm --gpus all --ipc=host --ulimit memlock=-1 --ulimit stack=67108864 ${{ env.TAG }} bash -c "python tools/md-benchmark.py --nvtx --no-tqdm"
+        run: docker run --gpus all --ipc=host --ulimit memlock=-1 --ulimit stack=67108864 ${{ env.TAG }} bash -c "python tools/md-benchmark.py --nvtx --no-tqdm"
   tests:
     needs: [build-image]
     runs-on: [self-hosted, ipickering]
     steps:
-      - run: docker run --rm --gpus '"device=none"' --ipc=host --ulimit memlock=-1 --ulimit stack=67108864 ${{ env.TAG }} bash -c "pytest ."
+      - run: docker run --gpus '"device=none"' ${{ env.DOCKER_ARGS }} ${{ env.TAG }} bash -c "pytest ."
   docs:
     needs: [build-image]
     runs-on: [self-hosted, ipickering]
