--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ classifiers = ["License :: OSI Approved :: MIT License"]
 requires-python = ">=3.8"
 dependencies = [
     "torch==2.3",
-    "numpy>=1.24",
+    "numpy==1.26",
     "typing_extensions>=4.0.0",
     "h5py",
     "tqdm",
