Use cli in typer, and fix datasets tests

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,7 +11,7 @@ build:
   string: py{{ python }}_torch{{ pytorch }}_cuda{{ cuda }}
   script: "CUDA_HOME=/usr/local/cuda {{ PYTHON }} -m pip install --config-settings=--global-option=ext-all-sms --no-build-isolation -v ."
   entry_points:
-    - torchani = torchani.cli:main
+    - ani = torchani.cli:main
 
 requirements:
   build:
