--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ requires = ["setuptools>=64", "setuptools-scm>=8"]
 build-backend = "setuptools.build_meta"
 
 [project.scripts]
-torchani = "torchani.cli:main"
+ani = "torchani.cli:main"
 
 [tool.setuptools.packages.find]
 where = ["."]
