--- a/dev_environment.yaml
+++ b/dev_environment.yaml
@@ -24,6 +24,7 @@ dependencies:
   - pytorch::pytorch-cuda=11.8
   # If not using CUDA GPU support, comment the previous line and uncomment the next:
   # - pytorch::cpuonly
+  # Note that cuAEV and MNP are not supported with cpu-only pytorch
 
   # Compiled extensions (cuAEV and MNP):
   # Needs CUDA GPU support. The CUDA libraries speciefied by the pytorch-cuda
